# anotaai

./: Dockerfile  README.md  app.py  config.py  crawler.py  data.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docker-image.yml
anotai_crawler/: app.py
