[tool.poetry]
name = "anotai-crawler"
version = "0.1.0"
description = ""
authors = ["anotai-devs"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
bs4 = "^0.0.1"
requests = "^2.28.1"
pandas = "^1.5.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
